# clock

./: CMakeLists.txt  ClockHand.qml  Main.qml  main.cpp
